# elite-game

./: .gitignore  README.md  main.py  pyproject.toml
src/: galaxy.py  galaxy_map.py  main.py  planet_enemy.py  planet_map.py  planet_player.py  plansys.py  settings.py  system_generator.py  tools.py
