[project]
name = "elitegame"
version = "0.1.0"
description = "There begins the journey to the galaxy of wonders!"
authors = [
    {name = "berberberk",email = "pedchenkoti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "numpy",
    "pytmx"
]
[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
